# portfolio

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.txt  Dockerfile  LEARNING_GUIDE.md  LICENSE  README.md  docker-compose.yml  entrypoint.sh  index.html  lab.html  portfolio.db-journal  pyproject.toml  requirements.txt
app/: __init__.py  config.py  db.py  llm.py  main.py  rag.py
app/routers/: chat.py  demos.py
data/: knowledge_base.md
