[project]
name = "pragna-portfolio"
version = "1.0.0"
description = "AI-powered portfolio backend — RAG chatbot + live ML demos"
authors = [{ name = "Pragna Urs Mysore Gopal", email = "p.urs.mysore@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "numpy>=1.26,<2.0",
    "sentence-transformers>=3.3",
    "transformers>=4.47",
    "torch>=2.5",
]

[project.optional-dependencies]
postgres = ["pgvector>=0.3"]
dev = ["pytest>=8.3", "pytest-asyncio>=0.25", "ruff>=0.9", "mypy>=1.13"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
